--- a/config/las_libri_config.yaml
+++ b/config/las_libri_config.yaml
@@ -9,7 +9,7 @@ model_parameter:
   input_feature_dim: 40                       # 
   listener_hidden_dim: 256                    # Default listener LSTM output dimension from LAS paper
   multi_head: 1                               # Numbers of head for multi-head attention
-  decode_mode: 0                              # Decoding mode, 0 : feed char distribution to next timestep, 1: feed one-hot
+  decode_mode: 1                              # Decoding mode, 0 : feed char distribution to next timestep, 1: feed argmax, 2: feed sampled vector
   use_mlp_in_attention: True                  # Set to False to exclude phi and psi in attention formula
   mlp_dim_in_attention: 128                   #
   mlp_activate_in_attention: 'relu'           #
@@ -26,8 +26,8 @@ training_parameter:
   seed: 1                  
   total_steps: 1000000
   batch_size: 8
-  tf_rate_upperbound: 0.8                    # teacher forcing rate during training will be linearly
-  tf_rate_lowerbound: 0.5                    # decayinn from upperbound to lower bound for each epoch
+  tf_rate_upperbound: 1.0                    # teacher forcing rate during training will be linearly
+  tf_rate_lowerbound: 0.6                    # decayinn from upperbound to lower bound for each epoch
   tf_decay_step: 100000
   verbose_step: 1                           # Show progress every verbose_step
   valid_step: 1000
