--- a/config/las_libri_config.yaml
+++ b/config/las_libri_config.yaml
@@ -8,7 +8,8 @@ model_parameter:
   max_label_len: 300                          # 
   input_feature_dim: 40                       # 
   listener_hidden_dim: 256                    # Default listener LSTM output dimension from LAS paper
-  multi_head: 1                               # Numbers of head for multi-head attention
+  listener_layer: 2                           # Number of layers in listener, the paper is using 3
+  multi_head: 1                               # Number of heads for multi-head attention
   decode_mode: 1                              # Decoding mode, 0 : feed char distribution to next timestep, 1: feed argmax, 2: feed sampled vector
   use_mlp_in_attention: True                  # Set to False to exclude phi and psi in attention formula
   mlp_dim_in_attention: 128                   #
@@ -22,12 +23,12 @@ model_parameter:
   label_smoothing: 0.1                        # Epsilon for label smoothing (set 0 to disable LS)
 
 training_parameter:
-  learning_rate: 0.001
+  learning_rate: 0.0001
   seed: 1                  
   total_steps: 1000000
   batch_size: 4
-  tf_rate_upperbound: 1.0                    # teacher forcing rate during training will be linearly
-  tf_rate_lowerbound: 0.6                    # decayinn from upperbound to lower bound for each epoch
+  tf_rate_upperbound: 0.9                    # teacher forcing rate during training will be linearly
+  tf_rate_lowerbound: 0.5                    # decaying from upperbound to lower bound for each epoch
   tf_decay_step: 100000
   verbose_step: 1                           # Show progress every verbose_step
   valid_step: 1000
