--- a/config/las_example_config.yaml
+++ b/config/las_example_config.yaml
@@ -9,6 +9,9 @@ model_parameter:
   max_label_len: 77                           # 
   input_feature_dim: 39                       # 
   listener_hidden_dim: 256                    # Default listener LSTM output dimension from LAS paper
+  listener_layer: 2                           # Number of layers in listener, the paper is using 3
+  multi_head: 1                               # Number of heads for multi-head attention
+  decode_mode: 1                              # Decoding mode, 0 : feed char distribution to next timestep, 1: feed argmax, 2: feed sampled vector
   use_mlp_in_attention: True                  # Set to False to exclude phi and psi in attention formula
   mlp_dim_in_attention: 128                   #
   mlp_activate_in_attention: 'relu'           #
@@ -19,15 +22,18 @@ model_parameter:
   use_gpu: True
   bucketing: False                            # Bucket training data by input sequence length 
                                               # (Tested and found not improving performance on TIMIT)
+  label_smoothing: 0.1                        # Epsilon for label smoothing (set 0 to disable LS)
+
 
 training_parameter:
   learning_rate: 0.0001
   seed: 1                  
-  num_epochs: 200
+  total_steps: 100000
   batch_size: 4
   tf_rate_upperbound: 0.8                     # teacher forcing rate during training will be linearly
   tf_rate_lowerbound: 0.0                     # decayinn from upperbound to lower bound for each epoch
-  verbose_step: 200                           # Show progress every verbose_step
+  verbose_step: 5                             # Show progress every verbose_step
+  valid_step: 100
   use_pretrained: False                       # Load a pretrained model, model path should be given
   pretrained_listener_path: 'checkpoint/las_example.listener' 
   pretrained_speller_path: 'checkpoint/las_example.speller' 
